# crewai-trip-planning

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  app.yaml  gunicorn.conf.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  cd.yml  ci.yml
memory/: chroma.sqlite3  long_term_memory_storage.db
src/trip_planning/: crew.py  main.py
src/trip_planning/config/: agents.yaml  tasks.yaml
src/trip_planning/models/: __init__.py  accommodation.py  attraction.py  budget.py  common.py  destination.py  dining.py  email.py  flight.py  itinerary.py  itinerary_validation.py  transportation.py  travel_document.py
src/trip_planning/tools/: email_tool.py
