[project]
name = "trip_planning"
version = "0.1.0"
description = "trip-planning using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "gradio>=5.22.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
trip_planning = "trip_planning.main:run"
run_crew = "trip_planning.main:run"
train = "trip_planning.main:train"
replay = "trip_planning.main:replay"
test = "trip_planning.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
