[project]
name = "trip_planning"
version = "0.2.1"
description = "trip-planning using crewAI"
authors = [{ name = "Alejandro Ramirez Garcia", email = "gx_alejandro@hotmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.0,<1.0.0",
    "fastapi[standard]>=0.116.1",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.2.14",
    "python-dotenv>=1.0.0",
    "yagmail>=0.15.293",
]

[tool.setuptools]
packages = {find = {}}

[project.scripts]
trip_planning = "trip_planning.main:main"
run_crew = "trip_planning.main:run"
train = "trip_planning.main:train"
replay = "trip_planning.main:replay"
test = "trip_planning.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
